--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "aos": "^2.3.3",
     "core-js": "^2.5.4",
+    "ng2-sticky": "^0.5.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
